apps/teslamate/teslamate/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teslamate
  namespace: teslamate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teslamate
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: teslamate
    spec:
      containers:
        - name: teslamate
          image: teslamate/teslamate:4.3.0
          ports:
            - containerPort: 4000
          startupProbe:
            tcpSocket:
              port: 4000
            failureThreshold: 30
            periodSeconds: 5
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 4000
            failureThreshold: 2
            periodSeconds: 30
            timeoutSeconds: 5
      restartPolicy: Always
      automountServiceAccountToken: false
