apps/teslamate/teslamate/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: teslamate
  namespace: teslamate
spec:
  ports:
    - port: 4000
      targetPort: 4000
  selector:
    app: teslamate
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  type: ClusterIP
