apps/teslamate/teslamate/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: teslamate
  namespace: teslamate
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
      sectionName: external-https
  hostnames:
    - teslamate.${BASE_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: teslamate
          port: 4000
